# rnc-lib

./: .gitignore  COPYING  Makefile.am  NOTICE  README.md  configure.ac  doxygen.cfg  doxygen.txt  rnc-1.0.pc.in
doc/: doxygen.cfg
include/: auto_arr_ptr  filemap  mkstr  rnc
include/rnc-lib/: fq.h  matrix.h  mt.h  rlc.h
src/: Makefile.am  fq.cpp  matrix.cpp  mt.cpp  pow_table_16  pow_table_8  rlc.cpp
test/: Makefile.am  rnc.cpp
test/common/: Makefile.am  auto_arr_ptr  test.cpp  test.h
test/original/: Makefile.am  rnc.cpp
test/sparse/: Makefile.am  rnc.cpp
test/test-fq/: Makefile.am  test-fq.cpp
test/test-matr/: Makefile.am  test-matr.cpp
test/test-rnd/: Makefile.am  test-rnd.cpp
